--- a/src/Pages/Pages.css
+++ b/src/Pages/Pages.css
@@ -267,6 +267,7 @@ to { opacity: 1; transform: translateY(0); }
     }
      .contact-info a {
         font-size: 1rem;
-        gap: 0.5rem;
+        gap: 1rem;
+        margin: 3.5vh 0;
     }
 }
